# graph-reasoning-benchmark

./: .gitignore  README.md  pyproject.toml
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/public/: results.json
dashboard/src/: App.tsx  index.css  palette.ts  types.ts  useData.ts
data/: sample_questions.json  tier_calibration.json  token_efficiency.md
data/encodings/: hierarchical-medium-n20-s0-3e753083.json  hierarchical-medium-n20-s1-46bef84c.json  random-small-n8-s0-ea5b77f8.json  random-small-n8-s1-25c6e2ed.json  scale_free-large-n150-s0-c3a6a790.json  scale_free-large-n150-s1-a1675ef4.json
data/graphs/: hierarchical-medium-n20-s0-3e753083.json  hierarchical-medium-n20-s1-46bef84c.json  random-small-n8-s0-ea5b77f8.json  random-small-n8-s1-25c6e2ed.json  scale_free-large-n150-s0-c3a6a790.json  scale_free-large-n150-s1-a1675ef4.json
data/questions/: hierarchical-medium-n20-s0-3e753083.json  hierarchical-medium-n20-s1-46bef84c.json  random-small-n8-s0-ea5b77f8.json  random-small-n8-s1-25c6e2ed.json  scale_free-large-n150-s0-c3a6a790.json  scale_free-large-n150-s1-a1675ef4.json
data/results/: export.json
docs/plans/: 2026-05-29-graph-reasoning-benchmark-design.md
examples/: generate_examples.py  manifest.json
examples/graphs/: demo__hierarchical_multiedge.json  large__scale_free.json  (+4 more)
papers/: SUMMARY.md  abs.html
scripts/: build_dashboard_data.py
tests/: test_answers.py  test_encoders.py  test_generator.py  test_metrics.py  test_models.py  test_pipeline.py  test_questions.py  test_summary.py  test_visualizer.py
(+31 files in other folders)
