[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grb"
version = "0.1.0"
description = "Graph Reasoning Benchmark: how well do LLMs reason over graphs across encodings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "networkx",
    "tiktoken",
    "pydantic>=2",
    "matplotlib",
    "graphviz",
    "pandas",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
grb = "grb.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
